# pyrf-budget-toolbox

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
agent_docs/: architecture.md  conventions.md  testing_guidelines.md
examples/: adsb.ipynb  adsb_pysdr.py  feasibility_5km_link.qmd  fosm-1.qmd  test1.py  test2.py  test3.py  test4-iot-geo.ipynb  test4-iot-geo.py  test_adsb_pysdr.py
src/rfbudget/: __init__.py  core.py  elements.py  physics.py  propagation.py  utils.py  visualizer.py
tests/: test_cable.py  test_cost_hata.py  test_display.py  test_noise.py  test_oip3.py  test_orbit.py
