[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfbudget"
version = "0.1.0"
dependencies = [
    "numpy",
    "matplotlib",
    "schemdraw",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "tabulate>=0.9.0",
]
